<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout android:id="@+id/info_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="40dip"
                android:paddingLeft="10dip"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/collect_or_replayBtn"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_begin"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/record_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/collect_or_replayBtn"
                        android:singleLine="true"
                        android:text="@string/record_start"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Button
                        android:id="@+id/replay_pause_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@id/record_status"
                        android:text="@string/pause_btn_txt"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@id/replay_pause_btn"
                        android:text="@string/back_btn_txt"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/zoom_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@id/back_btn"
                        android:text="@string/zoom_btn_txt"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/mode_switch_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/mode_switch_btn_txt" />

                    <Button
                        android:id="@+id/wave_data_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:layout_toLeftOf="@id/mode_switch_btn"
                        android:text="@string/history_data_btn_txt"
                        android:visibility="invisible" />
                </RelativeLayout>

                <com.nju.ecg.wave.ScrollAlwaysTextView
                    android:id="@+id/heart_para"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ecg_report_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp"
                android:paddingTop="10dip" >

                <TextView
                    android:id="@+id/heart_rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:text="@string/heart_rate_text"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/heart_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/question_mark"
                    android:textColor="@color/RED"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <com.nju.ecg.wave.EcgBackgroundView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <com.nju.ecg.wave.EcgDrawView
                android:id="@+id/ecgdrawview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null" />
            
            <LinearLayout android:id="@+id/progress_lay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:gravity="right">
                <TextView android:id="@+id/time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/BLACK"
                    android:layout_marginRight="10dp"/>
	            <SeekBar android:id="@+id/seek_bar"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:max="100"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    
    <RelativeLayout android:id="@+id/waiting_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone">
        <com.nju.ecg.wave.WaitingView
            android:id="@+id/waiting_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
        <Button android:id="@+id/skip_waiting_btn"
            android:layout_height="50dp"
            android:layout_width="80dp"
            android:layout_marginRight="50dip"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/skip_btn_bg"
            android:text="@string/skip_btn_txt"/>
    </RelativeLayout>

</RelativeLayout>