<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/patient_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip">
            
            <LinearLayout
	            android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
            	android:orientation="horizontal">
           		<TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_marginTop="2dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_id_label" />
            	<EditText
                android:id="@+id/patient_id_edit"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"              
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false" />
            </LinearLayout>
            
             <LinearLayout
	            android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
            	android:orientation="horizontal">
            	<TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_marginTop="2dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name_label" />
            	<EditText
                android:id="@+id/patient_name_edit"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"              
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"/>
            </LinearLayout>
            
            <LinearLayout
	            android:layout_width="fill_parent"
    	        android:layout_height="wrap_content"
            	android:orientation="horizontal">    
            	<TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_marginTop="2dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_address_label" />
            	<EditText
                android:id="@+id/patient_address_edit"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"              
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"
                />
            </LinearLayout>       

       </LinearLayout>
       </ScrollView>      

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="2dip"
           android:paddingRight="2dip" >

         <Button
             android:id="@+id/ok_button"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_weight="1"
             android:onClick="handleSubmit"
             android:text="@string/ok"
             android:textColor="@color/BLACK" />
                 
       <Button
           android:id="@+id/cancel_button"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_gravity="right"
           android:layout_weight="1"
           android:onClick="handleCancel"
           android:text="@string/cancel"
           android:textColor="@color/BLACK" />      
                
		</LinearLayout>
</LinearLayout>
